# ray

./: Dockerfile.shadow_gcs  ray-cluster-self-contained.yaml  ray-cluster-shadow-native.yaml  ray-rbac.yaml  redis-isolated.yaml  redis-shadow.yaml  run_failover_experiment.sh  service-account.yaml
docker/ray/: Dockerfile.shadow
python/ray/_private/: log_monitor.py  node.py  services.py
src/mock/ray/gcs/store_client/: store_client.h
src/ray/common/: ray_config_def.h
src/ray/gcs/: BUILD.bazel  gcs_node_manager.cc  gcs_server.cc  gcs_server.h  gcs_server_main.cc  store_client_kv.cc  store_client_kv.h
src/ray/gcs/leader_election/: BUILD.bazel  k8s_lease_client.cc  k8s_lease_client.h  k8s_lease_client_test.cc  leader_election_client_factory.cc  leader_election_client_factory.h  leader_election_client_interface.h
src/ray/gcs/sidecar/: Dockerfile  go.mod  main.go
src/ray/gcs/store_client/: in_memory_store_client.cc  in_memory_store_client.h  observable_store_client.cc  observable_store_client.h  redis_store_client.h  store_client.h
src/ray/gcs/tests/: gcs_node_manager_test.cc  gcs_server_rpc_test.cc
src/ray/rpc/authentication/: k8s_util.cc  k8s_util.h
